tests/ui/invalid-ident-keyword.fail.stderr
error: Invalid identifier: "struct"
 --> tests/ui/invalid-ident-keyword.fail.rs:2:5
  |
2 |     #name = "struct"
  |     ^^^^^
