tests/ui/invalid-ident-keyword.fail.rs
ident_str::ident_str! {
    #name = "struct"
    =>
}

fn main() {}
